--- a/src/styles/adventuresId.module.css
+++ b/src/styles/adventuresId.module.css
@@ -1,4 +1,5 @@
 .maincontainer {
+  position: relative;
   grid-column-start: 2;
   grid-column-end: 3;
   grid-row-start: 2;
