--- a/src/styles/sidebar.module.css
+++ b/src/styles/sidebar.module.css
@@ -4,11 +4,23 @@
   grid-row-start: 2;
   grid-row-end: 3;
 }
+
+.activechar {
+  background-color: green;
+  border-radius: 6px;
+  padding: 6px;
+  text-align: center;
+  max-width: fit-content;
+  max-height: fit-content;
+}
+
 @media only screen and (max-width: 480px) {
   .maincontainer {
     grid-column-start: 1;
     grid-column-end: 2;
     grid-row-start: 3;
     grid-row-end: 4;
+    flex-direction: row;
+    justify-content: space-evenly;
   }
 }
